# id_transaction

./: README.md  config.py  main.py  pyproject.toml
data/: operation_sort.json
id_transactions/utils/: get_json.py  print_last_5_transaction.py
tests/: test_format_operation.py  test_main.py  test_print_last_5_transaction.py  test_sorted_json.py
utils/: format_operation.py  get_executed_only.py  get_json.py  main.py  operations.json  print_last_5_transaction.py  sorted_json.py
