[tool.poetry]
name = "id-transactions"
version = "0.1.0"
description = ""
authors = ["Olonov AleKsandr <adrolv08111985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
